truncate-text global scss variable; fixed overflowing names on scoreboard and game select

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,9 @@
 body {
     overscroll-behavior-y: contain;
 }
+.truncate-text {
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow: ellipsis;
+    min-width:0;
+}
